Fix mobile navbar colors when using dark mode

--- a/assets/styles/dark-mode.css
+++ b/assets/styles/dark-mode.css
@@ -1,4 +1,4 @@
-html, .navbar, .autocomplete-dropdown-textarea {
+html, .navbar, .autocomplete-dropdown-textarea, .navbar-menu {
     background-color: #2a2a2a;
 }
 
